# thelook-ecommerce-analysis

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: thelook_ecommerce_analysis.ipynb
sql/: 01_schema_creation.sql  02_data_ingestion.sql  03_foreign_keys.sql  04_analytical_queries.sql
